--- a/README
+++ b/README
@@ -3,13 +3,19 @@ XiVO-doc
 
 This is the project of documentation of the software XiVO.
 
+Dependencies
+------------
+
+* Sphinx (package python-sphinx on Debian)
+* sphinx-git modified (for git changelog). To install it:
+
+   pushd /tmp && sudo pip install git+git://github.com/gelendir/sphinx-git.git@tagtitles && popd
+
+
 Build
 -----
 
-The documentation is based on Sphinx, so you will need sphinx (python-sphinx on
-Debian) to build it.
-
-$ make html
+   make html
 
 
 PDF version
